<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?tink_colorBackground"
  android:fitsSystemWindows="true"
  android:orientation="vertical">

  <include
      layout="@layout/tink_layout_toolbar_with_logo" />

  <FrameLayout
    android:id="@+id/addCredentialsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbarWithLogo">

    <androidx.core.widget.NestedScrollView
      android:id="@+id/scrollableContainer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
          android:id="@+id/tinkLogo"
          android:layout_width="40dp"
          android:layout_height="20dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="@dimen/tink_standard_margin_end"
          android:background="@drawable/tink_logo"
          android:backgroundTint="?tink_textColorSecondary"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/unverifiedWarning"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/tink_standard_margin_start"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="@dimen/tink_standard_margin_end"
          android:background="@drawable/tink_unverified_background"
          android:padding="12dp"
          android:text="@string/tink_credentials_unverified_warning_text"
          android:textAppearance="@style/tink_micro"
          android:textColor="?tink_colorError"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tinkLogo" />

        <LinearLayout
          android:id="@+id/credentialsFields"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/tink_standard_margin_start"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="@dimen/tink_standard_margin_end"
          android:orientation="vertical"
          app:layout_goneMarginTop="0dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/unverifiedWarning" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/providerHelpText"
          android:textAppearance="@style/tink_micro"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:paddingBottom="20dp"
          app:layout_constraintEnd_toEndOf="@id/credentialsFields"
          app:layout_constraintStart_toStartOf="@id/credentialsFields"
          app:layout_constraintTop_toBottomOf="@id/credentialsFields" />

        <ImageView
          android:id="@+id/emptyFieldsBankLogo"
          android:layout_width="60dp"
          android:layout_height="60dp"
          android:layout_marginTop="10dp"
          app:layout_constraintHorizontal_bias="0.498"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/unverifiedWarning" />

        <androidx.constraintlayout.widget.Group
          android:id="@+id/credentialsFieldsHelpTextGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:constraint_referenced_ids="credentialsFields, providerHelpText" />

        <androidx.constraintlayout.widget.Group
          android:id="@+id/emptyFieldsGroup"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="40dp"
          app:constraint_referenced_ids="emptyFieldsBankLogo, emptyFieldsLoginText,
            emptyFieldsInstructionTextContainer,emptyFieldsInstructionIcon, emptyFieldsAssuranceText" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/emptyFieldsLoginText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:layout_marginHorizontal="@dimen/tink_credentials_empty_login_text_marginStart"
          android:textAppearance="@style/tink_hecto.bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/emptyFieldsBankLogo" />

        <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/emptyFieldsInstructionTextContainer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="20dp"
          android:layout_marginVertical="16dp"
          android:layout_marginHorizontal="30dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/emptyFieldsLoginText"
          >

          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emptyFieldsInstructionTextNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tink_credentials_empty_fields_instructions_number_1"
            android:textAppearance="@style/tink_deci.primary.bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emptyFieldsInstructionText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tink_credentials_empty_fields_instructions_text_1"
            android:textAppearance="@style/tink_deci.primary"
            app:layout_constraintStart_toEndOf="@id/emptyFieldsInstructionTextNumber1"
            app:layout_constraintTop_toTopOf="parent"
            />

          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emptyFieldsInstructionTextNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tink_credentials_empty_fields_instructions_number_2"
            android:textAppearance="@style/tink_deci.primary.bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emptyFieldsInstructionText1"
            />
          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emptyFieldsInstructionText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tink_credentials_empty_fields_instructions_text_2"
            android:textAppearance="@style/tink_deci.primary"
            app:layout_constraintStart_toEndOf="@id/emptyFieldsInstructionTextNumber2"
            app:layout_constraintTop_toBottomOf="@id/emptyFieldsInstructionText1"
            />

          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emptyFieldsInstructionTextNumber3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tink_credentials_empty_fields_instructions_number_3"
            android:textAppearance="@style/tink_deci.primary.bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emptyFieldsInstructionText2"
            />
          <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emptyFieldsInstructionText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/tink_credentials_empty_fields_instructions_text_3"
            android:textAppearance="@style/tink_deci.primary"
            app:layout_constraintStart_toEndOf="@id/emptyFieldsInstructionTextNumber3"
            app:layout_constraintTop_toBottomOf="@id/emptyFieldsInstructionText2"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
          android:id="@+id/emptyFieldsInstructionIcon"
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_marginTop="24dp"
          android:scaleType="fitCenter"
          app:tint="?tink_textColorSecondary"
          app:srcCompat="@drawable/tink_lock"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/emptyFieldsInstructionTextContainer" />

        <com.google.android.material.textview.MaterialTextView
          android:id="@+id/emptyFieldsAssuranceText"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="@style/tink_deci"
          android:layout_marginTop="10dp"
          android:text="@string/tink_credentials_empty_fields_assurance"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/emptyFieldsInstructionIcon"
          />


        <Space
          android:id="@+id/bottomSpacer"
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/providerHelpText" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/footer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/tink_credentials_footer_background"
      android:layout_gravity="bottom"
      android:paddingTop="24dp">

      <com.google.android.material.button.MaterialButton
        android:id="@+id/createCredentialsBtn"
        style="?tink_buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:paddingHorizontal="28dp"
        android:paddingVertical="12dp"
        android:text="@string/tink_credentials_continue_button"
        app:layout_constraintBottom_toTopOf="@id/termsAndConsentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/bankIdButton"
        style="?tink_buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:paddingStart="24dp"
        android:paddingTop="2dp"
        android:paddingEnd="24dp"
        android:paddingBottom="2dp"
        android:text="@string/tink_credentials_bankid_button"
        app:icon="@drawable/tink_bankid"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toTopOf="@id/bankIdOtherDeviceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

      <com.google.android.material.button.MaterialButton
        android:id="@+id/bankIdOtherDeviceButton"
        style="?tink_textButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/tink_credentials_bankId_other_device_button"
        android:textSize="@dimen/tink_deci_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/termsAndConsentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lineHeight="@dimen/tink_deci_line_height" />

      <androidx.constraintlayout.widget.Group
        android:id="@+id/bankIdButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="bankIdButton" />

      <com.google.android.material.textview.MaterialTextView
        android:id="@+id/termsAndConsentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tink_credentials_termsAndConsentText_marginStart"
        android:layout_marginEnd="@dimen/tink_credentials_termsAndConsentText_marginEnd"
        android:layout_marginBottom="20dp"
        android:textAppearance="@style/tink_micro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/tink_credentials_privacy_policy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </FrameLayout>

  <include
    android:id="@+id/authenticateCredentialsLayout"
    layout="@layout/tink_layout_credentials_authenticate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbarWithLogo"
    android:visibility="gone" />

</RelativeLayout>