<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="?tink_colorBackground"
  android:orientation="vertical">

  <include
    layout="@layout/tink_layout_toolbar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/providers"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:overScrollMode="never"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    tools:listitem="@layout/tink_item_provider_list" />

  <ProgressBar
    android:id="@+id/loader"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:indeterminateTint="?tink_colorPrimary"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar" />

  <View
    android:id="@+id/errorIconBackground"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginBottom="8dp"
    android:alpha="0.1"
    android:background="@drawable/tink_rounded_background"
    android:backgroundTint="?tink_colorWarning"
    app:layout_constraintBottom_toTopOf="@id/errorTitle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <ImageView
    android:id="@+id/errorIcon"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:scaleType="fitCenter"
    android:src="@drawable/tink_warning"
    app:layout_constraintBottom_toBottomOf="@+id/errorIconBackground"
    app:layout_constraintEnd_toEndOf="@+id/errorIconBackground"
    app:layout_constraintStart_toStartOf="@+id/errorIconBackground"
    app:layout_constraintTop_toTopOf="@+id/errorIconBackground"
    app:tint="?tink_colorWarning" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/errorTitle"
    style="@style/tink_hecto.bold"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/tink_provider_list_error_marginStart"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="@dimen/tink_provider_list_error_marginEnd"
    android:layout_marginBottom="20dp"
    android:gravity="center_horizontal"
    android:text="@string/tink_provider_list_error_title"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tvNoBanks"
      style="@style/tink_deci.primary"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/tink_provider_list_error_marginStart"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="@dimen/tink_provider_list_error_marginEnd"
      android:layout_marginBottom="20dp"
      android:gravity="center_horizontal"
      android:visibility="gone"
      android:text="@string/tink_provider_list_empty"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/errorTitle" />

  <com.google.android.material.textview.MaterialTextView
    android:id="@+id/errorMessage"
    style="@style/tink_deci.primary"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/tink_provider_list_error_marginStart"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="@dimen/tink_provider_list_error_marginEnd"
    android:layout_marginBottom="20dp"
    android:gravity="center_horizontal"
    android:text="@string/tink_provider_list_error_description"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/errorTitle" />

  <com.google.android.material.button.MaterialButton
    android:id="@+id/retryButton"
    style="?tink_buttonStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingStart="28dp"
    android:paddingTop="12dp"
    android:paddingEnd="28dp"
    android:paddingBottom="12dp"
    android:layout_marginBottom="32dp"
    android:text="@string/tink_provider_list_error_retry_button"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <androidx.constraintlayout.widget.Group
    android:id="@+id/errorGroup"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="gone"
    app:constraint_referenced_ids="errorIcon, errorIconBackground, errorTitle, errorMessage, retryButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
